--- a/bib1.bib
+++ b/bib1.bib
@@ -614,6 +614,83 @@
   pages = {269--276}
 }
 
+
+@article{sato_marginal_2003-1,
+  title = {Marginal {{Structural Models}} as a {{Tool}} for {{Standardization}}:},
+  volume = {14},
+  issn = {1044-3983},
+  url = {http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&an=00001648-200311000-00009},
+  doi = {10.1097/01.EDE.0000081989.82616.7d},
+  shorttitle = {Marginal {{Structural Models}} as a {{Tool}} for {{Standardization}}},
+  timestamp = {2015-01-13T20:32:47Z},
+  langid = {english},
+  number = {6},
+  journaltitle = {Epidemiology},
+  shortjournal = {Epidemiology},
+  author = {Sato, Tosiya and Matsuyama, Yutaka},
+  urldate = {2015-01-13},
+  date = {2003-11},
+  pages = {680--686},
+  keywords = {_tablet_modified},
+  file = {Sato_Matsuyama_2003_Marginal Structural Models as a Tool for Standardization.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\EI9FHP4I\\Sato_Matsuyama_2003_Marginal Structural Models as a Tool for Standardization.pdf:application/pdf}
+}
+
+
+
+
+@article{vanderwal_ipw_2011,
+  title = {{IPW}: an {R} package for inverse probability weighting},
+  volume = {43},
+  url = {http://www.jstatsoft.org/v43/i13/paper},
+  shorttitle = {{IPW}},
+  timestamp = {2015-10-27T18:58:59Z},
+  number = {13},
+  journaltitle = {Journal of {Statistical} {Software}},
+  shortjournal = {{J}. {Stat}. {Softw}.},
+  author = {van der {Wal}, {Willem} {M}. and {Geskus}, {Ronald} {B}.},
+  date = {2011},
+  pages = {1--23},
+  keywords = {_tablet},
+  options = {useprefix},
+  file = {v43i13.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\TWJQZVXT\\v43i13.pdf:application/pdf}
+}
+
+
+@book{harrell_regression_2015,
+  title = {Regression modeling strategies: with applications to linear models, logistic and ordinal regression, and survival analysis},
+  isbn = {978-3-319-19425-7},
+  url = {http://dx.doi.org/10.1007/978-3-319-19425-7},
+  shorttitle = {Regression modeling strategies},
+  timestamp = {2015-09-12T15:43:17Z},
+  langid = {english},
+  author = {Harrell, Frank E},
+  urldate = {2015-09-12},
+  date = {2015},
+  keywords = {_tablet_modified},
+  file = {Harrell_2015_Regression modeling strategies.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\2KETIQVK\\bok%3A978-3-319-19425-7.pdf:application/pdf}
+}
+
+
+
+@book{kleinbaum_survival_2012,
+  location = {{New York}},
+  edition = {3rd ed},
+  title = {Survival analysis: a self-learning text},
+  isbn = {978-1-4419-6645-2},
+  shorttitle = {Survival analysis},
+  pagetotal = {700},
+  timestamp = {2014-08-17T13:50:35Z},
+  series = {Statistics for biology and health},
+  publisher = {{Springer}},
+  author = {Kleinbaum, David G.},
+  editora = {Klein, Mitchel},
+  editoratype = {collaborator},
+  date = {2012},
+  keywords = {_tablet_modified,Survival Analysis,Survival analysis (Biometry)},
+  file = {bok%3A978-1-4419-6646-9.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\PFWUEJ55\\bok%3A978-1-4419-6646-9.pdf:application/pdf}
+}
+
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
