--- a/recitation/ipw-coxph-recitation.Rmd
+++ b/recitation/ipw-coxph-recitation.Rmd
@@ -7,11 +7,11 @@ output:
     css: shinyprezcss.css
     fig_height: 3
     fig_width: 3
-  slidy_presentation: default
+    toc: yes
+  beamer_presentation: default
 csl: ../american-journal-of-epidemiology.csl
 bibliography: ../bib1.bib
 ---
-
 
 ```{r setup, echo=FALSE}
 # see http://stackoverflow.com/questions/24585254/working-with-knitr-using-subdirectories
@@ -227,7 +227,6 @@ run; quit;
 ```{r s-part3, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=FALSE}
 ```
 
-
 ## Adjusted Cox model | R
 
 ```{r r-part3, results='markup'}
@@ -268,10 +267,7 @@ run;
 
 ![](c:\temp\logcumhaz.jpeg) <!-- Add in the Survival.jpeg from SAS program above...-->
 
-
 ## Check proportional hazards assumption, SAS, 3 {.codefont2 .smaller}
-
-Second test looks at significance of interaction between time and **idu** effect.
 
 ```{r s-part3check-4, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup'}
 libname mle "c:\temp";
@@ -280,21 +276,56 @@ data a; set mle.b; run;
 
 *Second test product of idu and t;
 proc phreg data=a;
-	model t*delta(0)=idu idut/rl ties=efron;
-	idut=idu*t;
+	model t*delta(0)=idu idut / rl ties=efron;
+	idut=idu*t; * should it be log time?;
   ods select parameterestimates;
 	title "Crude Cox model, testing PH assumption";
 run;
 ```
 
-## ## Check proportional hazards assumption, R
+Second test looks at significance of interaction between time and **idu** effect. Book on survival analysis by Paul Allison [@allison_survival_2010] has good examples of handling interaction with time in SAS. (from page 153+)
+
+## Check proportional hazards assumption, R, 1
+
+NOTE: all code in this section for time dependent covariates copied from [this paper](https://www.jstatsoft.org/index.php/jss/article/view/v061c01/v61c01.pdf), titled "Tutorial: Survival Estimation for Cox Regression Models with Time-Varying Coefficients Using SAS and R"
+
+```{r r-part3check-1, results='markup'}
+
+cut.points <- unique(b$t[b$delta == 1]) # get unique time points for event
+
+SURV2 <- survSplit(data = b, cut = cut.points, end = "t", start = "time0", event = "delta") # make counting process data
+```
+
+## Check proportional hazards assumption, R, 2
+
+"To make the appearance match SAS, we sort SURV2 by subject then rename and reorder the columns." 
+
+```{r r-part3check-2, results='markup'}
+SURV2 <- SURV2[order(SURV2$id), ]
+names(SURV2)
+SURV2 <- SURV2[, c("id", "idu", "white", "age", "cd4", "time0", "t", "delta")]
+names(SURV2)[7]="time1"
+```
+
+## Check proportional hazards assumption, R, 3
+
+Add a time dependent covariate associated with **idu**.
+
+```{r r-part3check-3, results='markup'}
+SURV2$lt.idu = with(SURV2, idu*time1)
+s.5 = coxph(Surv(time0, time1, delta) ~ idu + lt.idu, data=SURV2)
+coef(summary(s.5))
+```
+
+
+## Check proportional hazards assumption, R, 2 (extra)
 
 The following link is to an R shiny app where you can view simulations of time interaction with a covariate in a Cox model.
 
 [https://vonholleunc.shinyapps.io/survival/](https://vonholleunc.shinyapps.io/survival/)
 
 
-## Nice table of Cox PH model assumptions [@harrell_regression_2015, p502]
+## Nice table of Cox PH model assumptions [@harrell_regression_2015, p502] -- optional
 
 <!-- see http://stackoverflow.com/questions/15625990/how-to-set-size-for-local-image-using-knitr-for-markdown-->
 
@@ -363,7 +394,7 @@ proc print data=c(obs=10); run;
 
 Take data set 'd', merging b data set, with $S(t)$, and c data set, with $N_k$,  and find $h_k = \frac{Y_k}{N_k \Delta_k}$. The deltat variable = $\Delta_k$. Back-calculate $Y_k$ by taking -log($S(t)$) = $H(t)$. Then $H_{t_k} - H_{t_{k-1}} = Y_k$.
 
-## Calculate crude Cox model by hand (SAS), 2 {.codefont2}
+## Calculate crude Cox model by hand (SAS), 2 
 
 ```{r s-part3a2, engine='sas', engine.path=saspath, engine.opts=sasopts}
 libname mle "c:\temp";
@@ -421,7 +452,7 @@ run;
 ![](c:\temp\Hazards.jpeg) <!-- Add in the Hazards.jpeg from SAS program above...-->
 
 
-## Calculate crude Cox model by hand (R)  {.codefont} 
+## Calculate crude Cox model by hand (R)  {.codefont2} 
 
 ```{r r-part3a, fig.keep='none'}
 
@@ -479,7 +510,7 @@ p.haz
 
 ## Confounding weights (SAS), 1 {.codefont .smaller}
 
-Output the IP weight, $\displaystyle\frac{Pr(IDU=1)}{Pr(IDU=1 \mid \textbf{C})}$ where $\textbf{C}$ = vector of covariates including **white**, **age**, **cd4** as confounders. The **n** data set contains the numerator of stabilized IP weight and the **d** data set contains the denominator of the stabilized IP weight.
+Output the stabilized IP weight, $\displaystyle\frac{Pr(A_i=a)}{Pr(A_i=a \mid \mathbf{C})}$ where $A$ is the exposure (IDU in this example) and $\mathbf{C}$ = vector of covariates including **white**, **age**, **cd4** as confounders. The **n** data set contains the numerator of stabilized IP weight and the **d** data set contains the denominator of the stabilized IP weight.
 
 ```{r s-part4-1, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup'}
 libname mle "c:\temp";
@@ -624,22 +655,22 @@ proc print data=mle.dn2(obs=10); run;
 
 ## IP-censoring weights (SAS), 5 {.smaller} 
 
-Merge the data sets with the numerator part of the censor weight, **dn2**, and the denominator part of the censor weight, **nm2**, by the unique person and time combinations. There are 1164 people and up to five time intervals per person so if there were no drop outs and no censoring then there could be up to `r 1164*5` rows in the data set **f**. 
+Merge the data sets with the numerator part of the censor weight, **dn2**, and the denominator part of the censor weight, **nm2**, by the unique person and time combinations. There are 1164 people and up to five time intervals per person so if there were no drop outs, no censoring and no events then there could be up to `r 1164*5` rows in the data set **f**.
 
 For each person take the product of the weight across all the time intervals. If the person is censored in the time interval then their weight is 0.
 
 
 $$
-\textrm{ipcw}_{it}^{} = \displaystyle \prod_{q=1}^{t} \displaystyle\frac{ Pr(D_i(q)=0)}{Pr(D_i(q)^{}=0 \mid  D_i(q) \geq q, \textrm{cov}_i^{})}
+\textrm{ipcw}_{it}^{} = \displaystyle\frac{ Pr(D_i > t)}{Pr(D_i > t \mid \textrm{cov}_i^{})} = \displaystyle\prod_{q \leq t} \displaystyle\frac{Pr(D_i(q)=0)}{Pr(D_i(q)=0 \mid \mathbf{cov}_i)}
 $$
 
-  * Notation:
+  * Notation
   
     * $D_i(q)$ = drop out status for individual $i$ at time $q$ (1=yes, 0=no)
     
     * $Pr(D_i(q)=0)$ is "...marginal proportion who had not dropped out by time $q$." [@cole_estimation_2015]
     
-    * $cov_i$ = covariate values for individual $i$
+    * $\mathbf{cov}_i$ = covariate values for individual $i$ that are common causes of drop out and study outcome for individual $i$ up to time $t$.
     
 
 ## IP-censoring weights (SAS), 5 {.codefont2}
@@ -658,7 +689,7 @@ data f; merge e nm2 dn2; by id in; retain num den;
 	if first.id then do; num=1; den=1; end;
 	num=num*nm2;
 	den=den*dn2;
-	if _drop then w2=(1-num)/(1-den); else w2=num/den;
+	if _drop then w2=(1-num)/(1-den);  else w2=num/den;
 	w3=w*w2;
 	label nm2= dn2=;
 	run;
