--- a/bib1.bib
+++ b/bib1.bib
@@ -691,25 +691,73 @@
 }
 
 
-@comment{jabref-meta: groupsversion:3;}
-@comment{jabref-meta: groupstree:
-0 AllEntriesGroup:;
-1 ExplicitGroup:01-Intro\;0\;cole_risk_2015\;;
-1 ExplicitGroup:02-Counterfactuals, design and confounding\;0\;ray_eva
-luating_2003\;vansteelandt_invited_2011\;brookhart_confounding_2010\;r
-ose_rose_2011\;brookhart_counterpoint_2015\;;
-1 ExplicitGroup:03-g-comp\;0\;snowden_implementation_2011\;_gcompr\;va
-nsteelandt_invited_2011-1\;rose_rose_2011-1\;petersen_assessing_2006\;
-_gcomppdf\;;
-2 ExplicitGroup:extra\;0\;robins_confidence_1988\;;
-1 ExplicitGroup:extra\;0\;robins_confidence_1988\;;
-1 ExplicitGroup:04-IP weighting and propensity scores\;0\;rosenbaum_ce
-ntral_1983\;lunceford_stratification_2004\;austin_introduction_2011\;f
-unk_doubly_2011\;westreich_invited_2010\;snowden_implementation_2011\;
-kurth_results_2005\;brookhart_propensity_2013\;rosenbaum_reducing_1984
-\;;
-1 ExplicitGroup:05-bootstrap\;0\;ahern_estimating_2009\;barker_practic
-al_2005\;;
-1 ExplicitGroup:extra\;0\;cox_partial_1975\;;
+@book{allison_survival_2010,
+  location = {{Cary, NC}},
+  edition = {2. ed},
+  title = {Survival analysis using SAS: a practical guide},
+  isbn = {978-1-59994-640-5 978-1-59994-884-3},
+  shorttitle = {Survival analysis using SAS},
+  pagetotal = {324},
+  timestamp = {2016-03-01T01:31:15Z},
+  publisher = {{SAS Press}},
+  author = {Allison, Paul David},
+  date = {2010},
+  keywords = {Data processing,Ereignisdatenanalyse,Failure time data analysis,Failure time data analysis Data processing,SAS,SAS (Computer file),Survival analysis (Biometry),Survival analysis (Biometry) Data processing}
 }
+
+
+@article{seaman_inverse_2014,
+  title = {Inverse {{Probability Weighting}} with {{Missing Predictors}} of {{Treatment Assignment}} or {{Missingness}}},
+  volume = {43},
+  issn = {0361-0926, 1532-415X},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/03610926.2012.700371},
+  doi = {10.1080/03610926.2012.700371},
+  timestamp = {2016-04-06T14:26:04Z},
+  langid = {english},
+  number = {16},
+  journaltitle = {Communications in Statistics - Theory and Methods},
+  author = {Seaman, Shaun and White, Ian},
+  urldate = {2016-04-06},
+  date = {2014-08-18},
+  pages = {3499--3515},
+  file = {Seaman_White_2014_Inverse Probability Weighting with Missing Predictors of Treatment Assignment.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\4VRIJ48F\\Seaman_White_2014_Inverse Probability Weighting with Missing Predictors of Treatment Assignment.pdf:application/pdf}
+}
+
+@article{seaman_combining_2012,
+  title = {Combining {{Multiple Imputation}} and {{Inverse-Probability Weighting}}},
+  volume = {68},
+  issn = {0006341X},
+  url = {http://doi.wiley.com/10.1111/j.1541-0420.2011.01666.x},
+  doi = {10.1111/j.1541-0420.2011.01666.x},
+  timestamp = {2016-04-06T14:27:11Z},
+  langid = {english},
+  number = {1},
+  journaltitle = {Biometrics},
+  author = {Seaman, Shaun R. and White, Ian R. and Copas, Andrew J. and Li, Leah},
+  urldate = {2016-04-06},
+  date = {2012-03},
+  pages = {129--137},
+  file = {biom0068-0129.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\PIPBZ3SR\\biom0068-0129.pdf:application/pdf}
+}
+
+
+@article{seaman_review_2013,
+  title = {Review of inverse probability weighting for dealing with missing data},
+  volume = {22},
+  issn = {0962-2802, 1477-0334},
+  url = {http://smm.sagepub.com/cgi/doi/10.1177/0962280210395740},
+  doi = {10.1177/0962280210395740},
+  timestamp = {2016-04-06T14:28:09Z},
+  langid = {english},
+  number = {3},
+  journaltitle = {Statistical Methods in Medical Research},
+  author = {Seaman, S. R. and White, I. R.},
+  urldate = {2016-04-06},
+  date = {2013-06-01},
+  pages = {278--295},
+  file = {Seaman_White_2013_Review of inverse probability weighting for dealing with missing data.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\A78UCK62\\Seaman_White_2013_Review of inverse probability weighting for dealing with missing data.pdf:application/pdf}
+}
+
+
+
 
